--- a/palidroma/index.html
+++ b/palidroma/index.html
@@ -14,5 +14,8 @@
     <script defer src="main.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <input id="input" class="m-5" type="text" />
+    <button id="btn">vai</button>
+  </body>
 </html>
