scritto nella pagina

--- a/palidroma/index.html
+++ b/palidroma/index.html
@@ -17,5 +17,6 @@
   <body>
     <input id="input" class="m-5" type="text" />
     <button id="btn">vai</button>
+    <div id="text"></div>
   </body>
 </html>
