--- a/pari e dispari/index.html
+++ b/pari e dispari/index.html
@@ -14,5 +14,7 @@
     <script defer src="main.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <input id="usernumber" type="number" />
+  </body>
 </html>
