--- a/pari e dispari/index.html
+++ b/pari e dispari/index.html
@@ -15,6 +15,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input id="usernumber" type="number" />
+    <input id="usernumber" type="text" />
   </body>
 </html>
