--- a/pari e dispari/index.html
+++ b/pari e dispari/index.html
@@ -15,6 +15,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input id="usernumber" type="text" />
+    <select name="" id="usernumber">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+    </select>
+    <select name="" id="num">
+      <option value="pari">pari</option>
+      <option value="dispari">dispari</option>
+    </select>
+    <button id="btn">vai</button>
   </body>
 </html>
