--- a/pari e dispari/index.html
+++ b/pari e dispari/index.html
@@ -27,5 +27,6 @@
       <option value="dispari">dispari</option>
     </select>
     <button id="btn">vai</button>
+    <div id="result"></div>
   </body>
 </html>
